# bazel_winlibs

./: .gitignore  MODULE.bazel  README.md  archives.bzl  artifacts_patterns.bzl  registry.bzl  rules.bzl  utilities_archives.bzl  utilities_hosts.bzl
.github/workflows/: winlibs.yml
Examples/: .bazelrc  MODULE.bazel
Examples/HelloWorld/: BUILD.bazel
templates/: BUILD.bazel.tpl  BUILD.compiler.bazel.tpl  BUILD.tpl  BUILD_clang.compiler.tpl  BUILD_clang.tpl  BUILD_gcc.compiler.tpl  BUILD_gcc.tpl  artifacts_patterns.bzl.tpl  utilities_action_names.bzl.tpl  utilities_cc_toolchain_config.bzl.tpl  utilities_config.bzl.tpl  utilities_toolchain_config_feature_legacy.bzl.tpl  vscode.bzl.tpl
